<resources>
    <string name="app_name">CarWash</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="logout">Logout</string>
    <string name="error_loading">Error loading bookings</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="book">Book</string>
    <string name="my_bookings">My bookings</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="macedonian">Macedonian</string>
    <string name="booking_fetch_error">Error loading bookings</string>
    <string name="no_bookings">No bookings</string>
    <string name="bookings_updated">Bookings updated</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>
    <string name="facebook_app_id">1582412193146483</string>
    <string name="google">Sign in with google</string>
    <string name="facebook">Continue with facebook</string>
    <string name="guest">Continue as guest</string>
    <string name="facebook_client_token">68697962c5ae9f8bdd22b15c47227864</string>
    <string name="change_language">Change Language</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome to CarWash"</string>
    <string name="chooseDate">Choose a date</string>
    <string name="chooseTime">Choose a time</string>
    <string name="choosenewDate">Choose a new date</string>
    <string name="choosenewTime">Choose a new time</string>
    <string name="carType">Car type:</string>
    <string name="bookmark">Note (optional)</string>
    <string name="name">Full Name: %1$s</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="type">Type:</string>
    <string name="note">Note:</string>
    <string name="welcome_user">Welcome, %1$s!</string>
    <string name="car_tip_label">🚗 Tip of the Day:\n“%1$s”</string>
    <string name="tip_1">Avoid washing your car under direct sunlight.</string>
    <string name="tip_2">Use wax to protect your paint.</string>
    <string name="tip_3">Regular washing prevents buildup of dirt.</string>
    <string-array name="vehicle_types">
        <item>Small Car</item>
        <item>Sedan</item>
        <item>Van</item>
        <item>SUV</item>
    </string-array>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="google_signin_failed">Google sign-in failed</string>
    <string name="facebook_signin_failed">Facebook sign-in failed</string>
    <string name="facebook_cancelled">Facebook sign-in cancelled</string>
    <string name="guest_login_failed">Unsuccessful guest login</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="registration_successful">Registration successful</string>
    <string name="error_saving_data">Error saving data</string>
    <string name="registration_failed">Registration failed</string>
    <string name="login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="select_date_time">Please select date and time</string>
    <string name="booking_success">Booking saved successfully</string>
    <string name="booking_failed">Booking failed</string>
    <string name="unknown">Unknown</string>
    <string name="load_error">Error loading</string>
    <string name="email_format">Email: %1$s</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_option">Select Option</string>
    <string name="update_booking">Update Booking</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="updated_successfully">Successfully updated</string>
    <string name="update_failed">Failed to update</string>
    <string name="booking_deleted">Booking deleted</string>
    <string name="delete_failed">Failed to delete</string>








</resources>
