<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.carwashapp.fragments.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/bookFragment"
        android:name="com.example.carwashapp.fragments.BookFragment"
        android:label="@string/book" />

    <fragment
        android:id="@+id/myBookingsFragment"
        android:name="com.example.carwashapp.fragments.MyBookingsFragment"
        android:label="@string/my_bookings" />


    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.carwashapp.fragments.ProfileFragment"
        android:label="@string/profile" />



</navigation>
