<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FBFF"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_user"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#0D47A1"
            android:layout_marginBottom="32dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:padding="24dp"
            android:layout_marginBottom="24dp"
            android:elevation="4dp"
            android:backgroundTint="#FFFFFF"
            android:clipToOutline="true"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="4dp">

            <Button
                android:id="@+id/btnBookNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book"
                android:backgroundTint="#1976D2"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btnMyBookings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_bookings"
                android:backgroundTint="#42A5F5"
                android:textColor="#FFFFFF" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvTip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="🚗 Совет на денот:\n„Избегнувајте миење на автомобилот на сонце.“"
            android:textSize="16sp"
            android:textColor="#212121"
            android:background="#FFFFFF"
            android:elevation="2dp"
            android:padding="16dp"
            android:backgroundTint="#FFFFFF"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>
